[package]
name = "quick-sort"
version = "0.1.0"
edition = "2018"
authors = [ "Michael Mesquita" ]
description = "A basic generic implementation of quick-sort for collections of ordered data."
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
